daemon_success_receipt_test = executable(
  'test-daemon-success-receipt',
  'test-daemon-success-receipt.c',
  dependencies: [wyrebox_dep],
)

daemon_request_identity_test = executable(
  'test-daemon-request-identity',
  'test-daemon-request-identity.c',
  dependencies: [wyrebox_dep],
)

daemon_client_identity_test = executable(
  'test-daemon-client-identity',
  'test-daemon-client-identity.c',
  dependencies: [wyrebox_dep],
)

daemon_peer_credentials_test = executable(
  'test-daemon-peer-credentials',
  'test-daemon-peer-credentials.c',
  dependencies: [wyrebox_dep],
)

daemon_mailbox_list_request_test = executable(
  'test-daemon-mailbox-list-request',
  'test-daemon-mailbox-list-request.c',
  dependencies: [wyrebox_dep],
)

daemon_mailbox_list_result_test = executable(
  'test-daemon-mailbox-list-result',
  'test-daemon-mailbox-list-result.c',
  dependencies: [wyrebox_dep],
)

daemon_mailbox_catalog_duckdb_test = executable(
  'test-daemon-mailbox-catalog-duckdb',
  'test-daemon-mailbox-catalog-duckdb.c',
  dependencies: [wyrebox_dep],
)

daemon_mailbox_select_request_test = executable(
  'test-daemon-mailbox-select-request',
  'test-daemon-mailbox-select-request.c',
  dependencies: [wyrebox_dep],
)

daemon_mailbox_status_request_test = executable(
  'test-daemon-mailbox-status-request',
  'test-daemon-mailbox-status-request.c',
  dependencies: [wyrebox_dep],
)

daemon_mail_event_stream_request_test = executable(
  'test-daemon-mail-event-stream-request',
  'test-daemon-mail-event-stream-request.c',
  dependencies: [wyrebox_dep],
)

daemon_derived_view_package_test = executable(
  'test-daemon-derived-view-package',
  'test-daemon-derived-view-package.c',
  dependencies: [wyrebox_dep],
)

daemon_export_request_test = executable(
  'test-daemon-export-request',
  'test-daemon-export-request.c',
  dependencies: [wyrebox_dep],
)

daemon_mailbox_select_result_test = executable(
  'test-daemon-mailbox-select-result',
  'test-daemon-mailbox-select-result.c',
  dependencies: [wyrebox_dep],
)

daemon_request_router_test = executable(
  'test-daemon-request-router',
  'test-daemon-request-router.c',
  dependencies: [wyrebox_dep],
)

daemon_fact_mutation_request_test = executable(
  'test-daemon-fact-mutation-request',
  'test-daemon-fact-mutation-request.c',
  dependencies: [wyrebox_dep],
)

daemon_fact_batch_import_request_test = executable(
  'test-daemon-fact-batch-import-request',
  'test-daemon-fact-batch-import-request.c',
  dependencies: [wyrebox_dep],
)

daemon_fact_mutation_service_test = executable(
  'test-daemon-fact-mutation-service',
  'test-daemon-fact-mutation-service.c',
  dependencies: [wyrebox_dep],
)

daemon_fact_batch_import_service_test = executable(
  'test-daemon-fact-batch-import-service',
  'test-daemon-fact-batch-import-service.c',
  dependencies: [wyrebox_dep],
)

daemon_fact_mutation_dispatcher_test = executable(
  'test-daemon-fact-mutation-dispatcher',
  'test-daemon-fact-mutation-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_fact_batch_import_dispatcher_test = executable(
  'test-daemon-fact-batch-import-dispatcher',
  'test-daemon-fact-batch-import-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_mailbox_select_dispatcher_test = executable(
  'test-daemon-mailbox-select-dispatcher',
  'test-daemon-mailbox-select-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_message_fetch_request_test = executable(
  'test-daemon-message-fetch-request',
  'test-daemon-message-fetch-request.c',
  dependencies: [wyrebox_dep],
)

daemon_message_fetch_dispatcher_test = executable(
  'test-daemon-message-fetch-dispatcher',
  'test-daemon-message-fetch-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_message_fetch_service_duckdb_test = executable(
  'test-daemon-message-fetch-service-duckdb',
  'test-daemon-message-fetch-service-duckdb.c',
  dependencies: [wyrebox_dep],
)

daemon_message_search_request_test = executable(
  'test-daemon-message-search-request',
  'test-daemon-message-search-request.c',
  dependencies: [wyrebox_dep],
)

daemon_message_search_dispatcher_test = executable(
  'test-daemon-message-search-dispatcher',
  'test-daemon-message-search-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_wirelog_predicate_query_request_test = executable(
  'test-daemon-wirelog-predicate-query-request',
  'test-daemon-wirelog-predicate-query-request.c',
  dependencies: [wyrebox_dep],
)

daemon_wirelog_predicate_query_catalog_test = executable(
  'test-daemon-wirelog-predicate-query-catalog',
  'test-daemon-wirelog-predicate-query-catalog.c',
  dependencies: [wyrebox_dep],
)

daemon_wirelog_predicate_query_dispatcher_test = executable(
  'test-daemon-wirelog-predicate-query-dispatcher',
  'test-daemon-wirelog-predicate-query-dispatcher.c',
  dependencies: [wyrebox_dep],
)

if wirelog_runtime_found
  daemon_wirelog_predicate_query_service_wirelog_test = executable(
    'test-daemon-wirelog-predicate-query-service-wirelog',
    'test-daemon-wirelog-predicate-query-service-wirelog.c',
    dependencies: [wyrebox_dep],
  )
endif

daemon_duckdb_query_template_request_test = executable(
  'test-daemon-duckdb-query-template-request',
  'test-daemon-duckdb-query-template-request.c',
  dependencies: [wyrebox_dep],
)

daemon_duckdb_query_template_catalog_test = executable(
  'test-daemon-duckdb-query-template-catalog',
  'test-daemon-duckdb-query-template-catalog.c',
  dependencies: [wyrebox_dep],
)

daemon_duckdb_query_template_service_duckdb_test = executable(
  'test-daemon-duckdb-query-template-service-duckdb',
  'test-daemon-duckdb-query-template-service-duckdb.c',
  dependencies: [wyrebox_dep],
)

daemon_duckdb_query_template_dispatcher_test = executable(
  'test-daemon-duckdb-query-template-dispatcher',
  'test-daemon-duckdb-query-template-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_delivery_ingestion_request_test = executable(
  'test-daemon-delivery-ingestion-request',
  'test-daemon-delivery-ingestion-request.c',
  dependencies: [wyrebox_dep],
)

daemon_delivery_ingestion_dispatcher_test = executable(
  'test-daemon-delivery-ingestion-dispatcher',
  'test-daemon-delivery-ingestion-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_flag_keyword_update_request_test = executable(
  'test-daemon-flag-keyword-update-request',
  'test-daemon-flag-keyword-update-request.c',
  dependencies: [wyrebox_dep],
)

daemon_flag_keyword_update_dispatcher_test = executable(
  'test-daemon-flag-keyword-update-dispatcher',
  'test-daemon-flag-keyword-update-dispatcher.c',
  dependencies: [wyrebox_dep],
)

daemon_config_test = executable(
  'test-daemon-config',
  'test-daemon-config.c',
  dependencies: [wyrebox_dep],
)

daemon_runtime_test = executable(
  'test-daemon-runtime',
  'test-daemon-runtime.c',
  dependencies: [wyrebox_dep],
)

daemon_socket_listener_test = executable(
  'test-daemon-socket-listener',
  'test-daemon-socket-listener.c',
  dependencies: [wyrebox_dep],
)

daemon_error_test = executable(
  'test-daemon-error',
  'test-daemon-error.c',
  dependencies: [wyrebox_dep],
)

daemon_error_frame_test = executable(
  'test-daemon-error-frame',
  'test-daemon-error-frame.c',
  dependencies: [wyrebox_dep],
)

daemon_response_frame_test = executable(
  'test-daemon-response-frame',
  'test-daemon-response-frame.c',
  dependencies: [wyrebox_dep],
)

daemon_stream_chunk_frame_test = executable(
  'test-daemon-stream-chunk-frame',
  'test-daemon-stream-chunk-frame.c',
  dependencies: [wyrebox_dep],
)

daemon_connection_session_test = executable(
  'test-daemon-connection-session',
  'test-daemon-connection-session.c',
  dependencies: [wyrebox_dep],
)

daemon_connection_server_test = executable(
  'test-daemon-connection-server',
  'test-daemon-connection-server.c',
  dependencies: [wyrebox_dep],
)

daemon_request_adapter_test = executable(
  'test-daemon-request-adapter',
  'test-daemon-request-adapter.c',
  dependencies: [wyrebox_dep],
)

daemon_frame_io_test = executable(
  'test-daemon-frame-io',
  'test-daemon-frame-io.c',
  dependencies: [wyrebox_dep],
)

daemon_uds_client_test = executable(
  'test-daemon-uds-client',
  'test-daemon-uds-client.c',
  dependencies: [wyrebox_dep],
)

if capnp_serialization_found
  daemon_api_capnp_smoke_test = executable(
    'test-daemon-api-capnp-smoke',
    [
      'test-daemon-api-capnp-smoke.cc',
      daemon_api_capnp_schema,
    ],
    dependencies: [capnp_dep, kj_dep],
    include_directories: daemon_api_capnp_schema_include,
  )

  daemon_api_capnp_codec_test = executable(
    'test-daemon-capnp-codec',
    [
      'test-daemon-capnp-codec.cc',
      daemon_api_capnp_schema,
    ],
    dependencies: [wyrebox_dep, capnp_dep, kj_dep],
    include_directories: [daemon_api_capnp_schema_include],
  )

  daemon_capnp_uds_test = executable(
    'test-daemon-capnp-uds',
    [
      'test-daemon-capnp-uds.cc',
      daemon_api_capnp_schema,
    ],
    dependencies: [wyrebox_dep, capnp_dep, kj_dep],
    include_directories: [daemon_api_capnp_schema_include],
  )
endif

test('daemon success receipt', daemon_success_receipt_test)
test('daemon request identity', daemon_request_identity_test)
test('daemon client identity', daemon_client_identity_test)
test('daemon peer credentials', daemon_peer_credentials_test)
test('daemon mailbox list request', daemon_mailbox_list_request_test)
test('daemon mailbox list result', daemon_mailbox_list_result_test)
test('daemon mailbox catalog duckdb', daemon_mailbox_catalog_duckdb_test)
test('daemon mailbox select request', daemon_mailbox_select_request_test)
test('daemon mailbox status request', daemon_mailbox_status_request_test)
test('daemon mail event stream request', daemon_mail_event_stream_request_test)
test('daemon derived view package', daemon_derived_view_package_test)
test('daemon export request', daemon_export_request_test)
test('daemon mailbox select result', daemon_mailbox_select_result_test)
test('daemon request router', daemon_request_router_test)
test('daemon fact mutation request', daemon_fact_mutation_request_test)
test('daemon fact batch import request',
  daemon_fact_batch_import_request_test)
test('daemon fact mutation service', daemon_fact_mutation_service_test)
test('daemon fact batch import service',
  daemon_fact_batch_import_service_test)
test('daemon fact mutation dispatcher', daemon_fact_mutation_dispatcher_test)
test('daemon fact batch import dispatcher',
  daemon_fact_batch_import_dispatcher_test)
test('daemon mailbox select dispatcher', daemon_mailbox_select_dispatcher_test)
test('daemon message fetch request', daemon_message_fetch_request_test)
test('daemon message fetch dispatcher', daemon_message_fetch_dispatcher_test)
test(
  'daemon message fetch service duckdb',
  daemon_message_fetch_service_duckdb_test,
  env: {
    'WYREBOX_EML_FIXTURE_DIR': meson.project_source_root() /
      'tests' / 'object-store' / 'fixtures',
  },
)
test('daemon message search request', daemon_message_search_request_test)
test('daemon message search dispatcher', daemon_message_search_dispatcher_test)
test('daemon wirelog predicate query request',
  daemon_wirelog_predicate_query_request_test)
test('daemon wirelog predicate query catalog',
  daemon_wirelog_predicate_query_catalog_test)
test('daemon wirelog predicate query dispatcher',
  daemon_wirelog_predicate_query_dispatcher_test)
if wirelog_runtime_found
  test('daemon wirelog predicate query service wirelog',
    daemon_wirelog_predicate_query_service_wirelog_test)
endif
test('daemon duckdb query template request',
  daemon_duckdb_query_template_request_test)
test('daemon duckdb query template catalog',
  daemon_duckdb_query_template_catalog_test)
test('daemon duckdb query template service duckdb',
  daemon_duckdb_query_template_service_duckdb_test,
  timeout: 120)
test('daemon duckdb query template dispatcher',
  daemon_duckdb_query_template_dispatcher_test)
test('daemon delivery ingestion request', daemon_delivery_ingestion_request_test)
test(
  'daemon delivery ingestion dispatcher',
  daemon_delivery_ingestion_dispatcher_test,
  env: {
    'WYREBOX_EML_FIXTURE_DIR': meson.project_source_root() /
      'tests' / 'object-store' / 'fixtures',
  },
)
test('daemon flag keyword update request', daemon_flag_keyword_update_request_test)
test('daemon flag keyword update dispatcher',
  daemon_flag_keyword_update_dispatcher_test)
test('daemon config', daemon_config_test)
test('daemon runtime', daemon_runtime_test)
test('daemon socket listener', daemon_socket_listener_test)
test('daemon error', daemon_error_test)
test('daemon error frame', daemon_error_frame_test)
test('daemon response frame', daemon_response_frame_test)
test('daemon stream chunk frame', daemon_stream_chunk_frame_test)
test('daemon connection session', daemon_connection_session_test)
test('daemon connection server', daemon_connection_server_test)
test('daemon request adapter', daemon_request_adapter_test)
test('daemon frame io', daemon_frame_io_test)
test('daemon uds client', daemon_uds_client_test)
if capnp_serialization_found
  test('daemon api capnp smoke', daemon_api_capnp_smoke_test)
  test('daemon capnp codec', daemon_api_capnp_codec_test)
  test('daemon capnp uds', daemon_capnp_uds_test)
endif
